fix(gwasUnifiedFlowVirtualTourButtons): created new branch with name that aligns with platform guidelines, i.e. fix/ and not bugfix/

--- a/src/Analysis/GWASV2/Components/Covariates/Covariates.css
+++ b/src/Analysis/GWASV2/Components/Covariates/Covariates.css
@@ -12,7 +12,7 @@
 }
 
 /* Buttons */
-.GWASV2 .custom-dichotomous-covariates .button-wrapper {
+.GWASV2 .custom-dichotomous-covariates .dichotomous-button-wrapper {
   display: flex;
 }
 
@@ -72,19 +72,19 @@
 
 .GWASV2 .continuous-covariates .select-covariates-container .ant-select,
 .GWASV2
-.continuous-covariates
-.select-covariates-container
-.ant-select-dropdown {
+  .continuous-covariates
+  .select-covariates-container
+  .ant-select-dropdown {
   width: 100%;
   min-width: inherit;
 }
 
 .GWASV2
-.continuous-covariates
-.ant-table.ant-table-middle
-.ant-table-tbody
-> tr
-> td {
+  .continuous-covariates
+  .ant-table.ant-table-middle
+  .ant-table-tbody
+  > tr
+  > td {
   padding: 5px 8px;
 }
 
